# enchantum

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeUserPresets.json  DartConfiguration.tcl  PERFORMANCE_IMPROVEMENTS.md  README.md  TECHNICAL_IMPLEMENTATION_PLAN.md  benchmark_baseline.txt  benchmark_final.txt  benchmark_mphf.txt  benchmark_optimized_v1.txt  benchmark_optimized_v2.txt  enchantumConfig.cmake  enchantum_big_enums.cpp  enchantum_ideal_range.cpp  enchantum_small_enums.cpp  enchantum_small_enums_large_range.cpp  magic_enum_big_enums.cpp  magic_enum_ideal_range.cpp  magic_enum_small_enums.cpp  magic_enum_small_enums_large_range.cpp  simple_enum_big_enums.cpp  simple_enum_ideal_range.cpp  simple_enum_small_enums.cpp  simple_enum_small_enums_large_range.cpp
benchmarks/: CI_benchmarking.md  CMakeLists.txt  basic_benchmark.cpp  compiler_id.hpp  policy_bench_auto.cpp  policy_bench_len_first.cpp  policy_bench_naive.cpp
benchmarks/results/: combined_gcc-13.3.csv  summary_gcc-13.3.md
benchmarks/results-clang/: combined_clang-18.1.csv  summary_clang-18.1.md
benchmarks/results-clang/raw_csv/: clang-18.1_AUTO.csv  clang-18.1_LEN_FIRST.csv  clang-18.1_NAIVE.csv
benchmarks/results/raw_csv/: gcc-13.3_AUTO.csv  gcc-13.3_LEN_FIRST.csv  gcc-13.3_NAIVE.csv
build-clang/: CMakeCache.txt  Makefile
build-test/: CMakeCache.txt  Makefile  enchantumTargets.cmake
clinic-stopwatch-app/: forge.config.js  package-lock.json  package.json  webpack.main.config.js
cmake/: Optimize.cmake
docs/: compile_time_optimization.md
my-clinic-app/: README.md  package-lock.json  package.json
scripts/: generate_single_header.py  measure_build.sh  run_benchmarks.py  run_benchmarks.sh  summarize.py
single_include/: enchantum_single_header.hpp
tests/: CMakeLists.txt  mphf_test.cpp  (+2 more)
(+54 files in other folders)
